trunk/Archive2/9b/15855b8913aa19/output
main.cpp:32:38: error: no matching member function for call to 'Construct'
                return Factory<ArgsT...>::template Construct<T>(args...);
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
main.cpp:53:24: note: in instantiation of function template specialization 'Type<Tuba>::CreateInstance<int>' requested here
        Tuba* tuba = tubaType.CreateInstance(2);
                              ^
main.cpp:22:19: note: candidate template ignored: couldn't infer template argument ''
        static U* Construct(ArgsT... args)
                  ^
1 error generated.
